Edited Education Content

--- a/public/index.html
+++ b/public/index.html
@@ -204,54 +204,49 @@
 	</nav> 
 
  <!-- education -->
-    <div id="education" class="content-section-a">
-     <div class="container">
+	<div id="education" class="content-section-b">
+	 <div class="container">
 			<div class="col-md-12 text-center" id="education">
 				<img class="img-circle" src="img/icon/pencils.svg">
 				<h2>Education</h2>
 			</div><br>
 
-      <div class="row">
-        <div class="col-xs-12 col-md-10 col-md-offset-2">
-          <h3><strong>Codeup</strong>  -  <small>April 2016 - September 2016</small></h3>
-          <ul>
-             <li>
-              16 week immersive fullstack web development course focused on LAMP+J languages and technologies.
-            </li>
-            <li>
-              600+ hours in and outside classroom learning and building real world-level projects.
-            </li>
-            <li>
-              Worked extensively with provisioning tools Vagrant and Ansible, Git for version control and the Linux command line interface.
-            </li>
-            <li>
-              Created GalapaGo, an end-to-end third party medical web application in less than 2-1/2 weeks using PHP and the Laravel framework.
-            </li>
-          </ul>
-        </div>
-      </div> 
-      <div class="row">
-        <div class="col-xs-12 col-md-10 col-md-offset-2">
-          <h3><strong>Millsaps College</strong>  -  <small>Bachelors in Business Administration, 2002 - 2006</small></h3>
-          <ul>
-             <li>
-              Graduated Cum Laude.
-            </li>
-            <li>
-              Dean's List all four years.
-            </li>
-            <li>
-              Member of men's basketball team. Voted team captain final 3 years.
-            </li>
-            <li>
-              Scholastic chairman for Kappa Sigma fraternity.
-            </li>
-          </ul>
-        </div>
-      </div> 
-    </div> 
-
-<!-- end of education -->
+	  <div class="row">
+		<div class="col-xs-12 col-md-10 col-md-offset-2">
+		  <h3><strong>Codeup</strong></h3><h5>April 2016 - September 2016</h5>
+		  <ul>
+			 <li>
+			  16 week immersive fullstack web development course focused on LAMP+J languages and technologies.
+			</li>
+			<li>
+			  600+ hours in and outside classroom learning and building real world-level projects.
+			</li>
+			<li>
+			  Worked extensively with provisioning tools Vagrant and Ansible, Git for version control and the Linux command line interface.
+			</li>
+			<li>
+			  Worked in a team of three to create fitwager, a unique web application allowing fitbit users to challenge their friends with bragging rights on the line through our wager coin system.
+			</li>
+		  </ul>
+		</div>
+	  </div> 
+	  <div class="row">
+		<div class="col-xs-12 col-md-10 col-md-offset-2">
+			<h3><strong>University of Texas</strong></h3><h5>College of Communication - B.S. RTF (2008 - 2012)</h5>
+		  <ul>
+			<li>
+			  Cumulative GPA over 3.0 with over 130 hours of accredited hours.
+			</li>
+			<li>
+			  Intern for Keller Williams Realty, ESPN Radio & Alamo Drafthouse Cinemas.
+			</li>
+			<li>
+			  Senior Producer for College Pressbox and College Crossfire at Texas Student Television.
+			</li>
+		  </ul>
+		</div>
+	  </div> 
+	</div><br>
 	
 <!-- About Me (Video) -->
 	<div id ="about_me" class="content-section-a">
