Further style changes

--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
 			<div class="col-md-12 text-center" id="about_me">
 				<img class="img-circle" src="img/icon/laptop.svg">
 				<h2>About Me</h2>
-			</div><br>
+			</div><br><br>
 			
 			<div class="row">
 				<div class="text-center embed-responsive embed-responsive-16by9">
@@ -270,13 +270,14 @@
 	<div id="projects" class="content-section-b">
 		<div class="container">
 			<div class="row">
-				 <div class="col-lg-6 wrap_title text-center">
+				 <div class="col-lg-6 text-center">
 					<h2>Projects</h2><br>
+			</div>
+			<div class="row text-center">
 					<img class="img-circle" src="img/icon/map.svg">
 					<img class="img-circle" src="img/icon/pencil.svg">
 					<img class="img-circle" src="img/icon/folder.svg">
-				 </div><br>
-			</div>
+			</div><br>
 			<div class="row">
 				 <div class="col-xs-4" id="project_files">
 			 		<a class="thumbnail" href="http://simplesimon.dev/index.html" target="_blank">
