--- a/public/index.html
+++ b/public/index.html
@@ -210,6 +210,35 @@
 
 <!-- End of Projects -->
 
+<!-- Languages Glyphs -->
+
+	<div id="languages" class="content-section-a">
+        <div class="container">
+          	<div class="col-lg-12 text-center">
+				<h2>Languages & Technologies</h2><br><br>
+			</div>
+		</div>
+		<div class="row">
+         	<div class="col-sm-2 col-sm-offset-1">
+            <img src="img/icon/HTML5.svg" alt="HTML5">
+         	</div>
+         	<div class="col-sm-2 col-sm-offset-1">
+            <img src="img/icon/css3.png" alt="CSS">
+         	</div>
+         	<div class="col-sm-2 col-sm-offset-1">
+            <img src="img/icon/javascript.png" alt="JS">
+         	</div>
+         	<div class="col-sm-2 col-sm-offset-1">
+            <img src="img/icon/jQuery.png" alt="JQ">
+         	</div>
+         	<div class="col-sm-2 col-sm-offset-1">
+            <img src="img/icon/php.svg" alt="PHP">
+         	</div>
+        </div>
+    </div>
+
+<!-- End of Languages glyphs -->
+
 
 	
 
@@ -255,7 +284,7 @@
 			<hr class="featurette-divider hidden-lg"><br><br>
 				<div class="col-md-5 col-md-push-1 address">
 					
-					<h3>Social</h3>
+					<h3>Social & Email</h3>
 					<li class="social"> 
 					<a href="https://github.com/craig-rupp" target="_blank"><i class="fa fa-github-square fa-size"> </i></a>
 					<a href="https://twitter.com/CraigTRupp" target="_blank"><i class="fa  fa-twitter-square fa-size"> </i> </a> 
