--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 	<!-- FullScreen -->
 	<div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Craig Rupp</h1>
+			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Craig Rupp!</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s" id="title_description">Developer & Texan</h3><br>
 			<img class="img-circle resume-profile" id="profile_image" src="img/personal_site.jpeg" alt="">
 			<!-- <ul class="list-inline intro-social-buttons">
