--- a/public/index.html
+++ b/public/index.html
@@ -59,21 +59,20 @@
 	<!-- FullScreen -->
 	<div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Craig Thomas Rupp!</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s" id="title_description">Developer & Texan</h3><br>
-			<img class="img-circle resume-profile" id="profile_image" src="img/personal_site.jpeg" alt="">
-			<!-- <ul class="list-inline intro-social-buttons">
-				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
+			<h1 class="h1_home wow fadeIn" data-wow-delay=".9s">Craig Rupp</h1>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="1.2s" id="title_description">Developer & Client Stratego</h3><br>
+			<ul class="list-inline intro-social-buttons">
+				<li><a href="https://www.linkedin.com/in/craigrupp19" target="_blank" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="1.5s"><span class="network-name">LinkedIn</span></a>
 				</li>
-				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Free Download</span></a>
+				<li id="download" ><a href="Download/Resume16.pdf" download="Resume16.pdf" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.8s"><span class="network-name">Resume</span></a>
 				</li>
-			</ul> -->
+			</ul>
 		</div>    
 		<!-- /.container -->
 		<div class="col-xs-12 text-center abcen wow fadeIn">
-			<!-- <div class="button_down "> 
-				<a class="imgcircle wow bounceInUp" data-wow-duration="1.5s"  href="#resume_list"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
-			</div> -->
+			<div class="button_down "> 
+				<a class="imgcircle wow bounceInUp" data-wow-duration="1.8s"  href="#education"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
+			</div>
 		</div>
 	</div>
 	
@@ -206,7 +205,7 @@
 				</div>
 			</div>
 		</div>
-	</div><br>
+	</div>
 
 <!-- End of Projects -->
 
@@ -214,7 +213,7 @@
 
 	<div id="languages" class="content-section-a">
         <div class="container">
-          	<div class="col-lg-12 text-center">
+          	<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>Languages & Technologies</h2><br><br>
 			</div>
 		</div>
