--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 	<div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay=".9s">Craig Rupp</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="1.2s" id="title_description">Developer & Client Stratego</h3><br>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="1.2s" id="title_description">Developer & Client Stratego</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="https://www.linkedin.com/in/craigrupp19" target="_blank" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="1.5s"><span class="network-name">LinkedIn</span></a>
 				</li>
@@ -211,28 +211,34 @@
 
 <!-- Languages Glyphs -->
 
-	<div id="languages" class="content-section-a">
+	<div id="languages" class="content-section-c">
         <div class="container">
-          	<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Languages & Technologies</h2><br><br>
+          	<div class="col-sm-5 col-sm-offset-4 text-center white wrap_title">
+				<h2>Languages & Tech</h2>
 			</div>
-		</div>
-		<div class="row">
-         	<div class="col-sm-2 col-sm-offset-1">
-            <img src="img/icon/HTML5.svg" alt="HTML5">
+		</div><br>
+		<div class="row clients centered">
+         	<div class="col-sm-2 col-sm-offset-2" id="project_files">
+            <img src="img/prog_icon/my_ic/png/html-5.png" alt="HTML5">
          	</div>
-         	<div class="col-sm-2 col-sm-offset-1">
-            <img src="img/icon/css3.png" alt="CSS">
+         	<div class="col-sm-2" id="project_files">
+            <img src="img/prog_icon/my_ic/png/css-3.png" alt="HTML5">
          	</div>
-         	<div class="col-sm-2 col-sm-offset-1">
-            <img src="img/icon/javascript.png" alt="JS">
+         	<div class="col-sm-2" id="project_files">
+            <img src="img/prog_icon/my_ic/png/js.png" alt="HTML5">
          	</div>
-         	<div class="col-sm-2 col-sm-offset-1">
+         	<div class="col-sm-2" id="project_files">
+            <img src="img/prog_icon/my_ic/png/php.png" alt="HTML5">
+         	</div>
+         	<div class="col-sm-2" id="project_files">
+            <img src="img/prog_icon/my_ic/png/python.png" alt="HTML5">
+         	</div>
+         	<!-- <div class="col-sm-2 col-sm-offset-1">
             <img src="img/icon/jQuery.png" alt="JQ">
          	</div>
          	<div class="col-sm-2 col-sm-offset-1">
             <img src="img/icon/php.svg" alt="PHP">
-         	</div>
+         	</div> -->
         </div>
     </div>
 
