--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,11 @@
 	<div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay=".9s">Craig Rupp</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="1.2s" id="title_description">Developer & Client Stratego</h3>
+			<h4 class="h4_home wow fadeIn" data-wow-delay="1.2s" id="title_description">Developer & Client Stratego</h4>
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="https://www.linkedin.com/in/craigrupp19" target="_blank" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="1.5s"><span class="network-name">LinkedIn</span></a>
+				<li><a href="https://www.linkedin.com/in/craigrupp19" target="_blank" class="btn  btn-md mybutton_cyano wow fadeIn" data-wow-delay="1.5s"><span class="network-name">LinkedIn</span></a>
 				</li>
-				<li id="download" ><a href="Download/Resume16.pdf" download="Resume16.pdf" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.8s"><span class="network-name">Resume</span></a>
+				<li id="download" ><a href="Download/Resume16.pdf" download="Resume16.pdf" class="btn  btn-md mybutton_standard wow swing wow fadeIn" data-wow-delay="1.8s"><span class="network-name">Resume</span></a>
 				</li>
 			</ul>
 		</div>    
@@ -213,33 +213,29 @@
 
 	<div id="languages" class="content-section-c">
         <div class="container">
-          	<div class="col-sm-5 col-sm-offset-4 text-center white wrap_title">
-				<h2>Languages & Tech</h2>
+          	<div class="col-lg-12 text-center white wrap_title">
+				<h2>Languages & Resources</h2>
 			</div>
-		</div><br>
-		<div class="row clients centered">
-         	<div class="col-sm-2 col-sm-offset-2" id="project_files">
-            <img src="img/prog_icon/my_ic/png/html-5.png" alt="HTML5">
-         	</div>
-         	<div class="col-sm-2" id="project_files">
-            <img src="img/prog_icon/my_ic/png/css-3.png" alt="HTML5">
-         	</div>
-         	<div class="col-sm-2" id="project_files">
-            <img src="img/prog_icon/my_ic/png/js.png" alt="HTML5">
-         	</div>
-         	<div class="col-sm-2" id="project_files">
-            <img src="img/prog_icon/my_ic/png/php.png" alt="HTML5">
-         	</div>
-         	<div class="col-sm-2" id="project_files">
-            <img src="img/prog_icon/my_ic/png/python.png" alt="HTML5">
-         	</div>
-         	<!-- <div class="col-sm-2 col-sm-offset-1">
-            <img src="img/icon/jQuery.png" alt="JQ">
-         	</div>
-         	<div class="col-sm-2 col-sm-offset-1">
-            <img src="img/icon/php.svg" alt="PHP">
-         	</div> -->
-        </div>
+			<div class="row text-center">
+		     	<div class="col-sm-2 col-sm-offset-2" id="project_files">
+		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/html.png" alt="HTML5">
+		     	</div>
+		     	<div class="col-sm-2" id="project_files">
+		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/css.png" alt="CSS3">
+		     	</div>
+		     	<div class="col-sm-2" id="project_files">
+		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/js.png" alt="js">
+		     	</div>
+		     	<div class="col-sm-2" id="project_files">
+		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/php.png" alt="PHP">
+		     	</div>
+		    </div><br>
+		    <div class="row text-center">
+		     	<div class="col-sm-2 col-sm-offset-3" id="project_files">
+		        <img class="img-responsive" src="img/prog_icon/my_ic_2/png/python.png" alt="Python">
+		     	</div>
+		    </div>
+		</div>
     </div>
 
 <!-- End of Languages glyphs -->
