--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,9 @@
 			<h1 class="h1_home wow fadeIn" data-wow-delay=".9s">Craig Rupp</h1>
 			<h4 class="h4_home wow fadeIn" data-wow-delay="1.2s" id="title_description">Developer & Client Stratego</h4>
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="https://www.linkedin.com/in/craigrupp19" target="_blank" class="btn  btn-md mybutton_cyano wow fadeIn" data-wow-delay="1.5s"><span class="network-name">LinkedIn</span></a>
+				<li><a href="https://www.linkedin.com/in/craigrupp19" target="_blank" class="btn  btn-sm mybutton_cyano wow fadeIn" data-wow-delay="1.5s"><span class="network-name">LinkedIn</span></a>
 				</li>
-				<li id="download" ><a href="Download/Resume16.pdf" download="Resume16.pdf" class="btn  btn-md mybutton_standard wow swing wow fadeIn" data-wow-delay="1.8s"><span class="network-name">Resume</span></a>
+				<li id="download" ><a href="Download/Resume16.pdf" download="Resume16.pdf" class="btn  btn-sm mybutton_standard wow swing wow fadeIn" data-wow-delay="1.8s"><span class="network-name">Resume</span></a>
 				</li>
 			</ul>
 		</div>    
@@ -214,25 +214,44 @@
 	<div id="languages" class="content-section-c">
         <div class="container">
           	<div class="col-lg-12 text-center white wrap_title">
-				<h2>Languages & Resources</h2>
+				<h2>Tech & Programming Languages</h2>
 			</div>
 			<div class="row text-center">
+					<img class="img-circle" src="img/icon/speed.svg">
+					<img class="img-circle" src="img/icon/loop.svg">
+					<img class="img-circle" src="img/icon/config.svg">
+			</div><br>
+			<div class="row text-center">
 		     	<div class="col-sm-2 col-sm-offset-2" id="project_files">
-		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/html.png" alt="HTML5">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/html.png" alt="HTML5">
 		     	</div>
 		     	<div class="col-sm-2" id="project_files">
-		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/css.png" alt="CSS3">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/css.png" alt="CSS3">
 		     	</div>
 		     	<div class="col-sm-2" id="project_files">
-		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/js.png" alt="js">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/js.png" alt="js">
 		     	</div>
 		     	<div class="col-sm-2" id="project_files">
-		        	<img class="img-responsive" src="img/prog_icon/my_ic_2/png/php.png" alt="PHP">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/php.png" alt="PHP">
 		     	</div>
-		    </div><br>
+		    </div>
 		    <div class="row text-center">
 		     	<div class="col-sm-2 col-sm-offset-3" id="project_files">
-		        <img class="img-responsive" src="img/prog_icon/my_ic_2/png/python.png" alt="Python">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/python.png" alt="Python">
+		     	</div>
+		     	<div class="col-sm-2" id="project_files">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/sql.png" alt="CSS3">
+		     	</div>
+		     	<div class="col-sm-2" id="project_files">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/gh.png" alt="CSS3">
+		     	</div>
+		    </div>
+		     <div class="row text-center">
+		     	<div class="col-sm-2 col-sm-offset-4" id="project_files">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/linux-1.png" alt="Python">
+		     	</div>
+		     	<div class="col-sm-2" id="project_files">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/api.png" alt="CSS3">
 		     	</div>
 		    </div>
 		</div>
