--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 				<li id="download" ><a href="Download/Resume16.pdf" download="Resume16.pdf" class="btn  btn-sm mybutton_standard wow swing wow fadeIn" data-wow-delay="1.8s"><span class="network-name">Resume</span></a>
 				</li>
 			</ul>
-		</div>    
+		</div><br>    
 		<!-- /.container -->
 		<div class="col-xs-12 text-center abcen wow fadeIn">
 			<div class="button_down "> 
@@ -223,7 +223,7 @@
 			</div><br>
 			<div class="row text-center">
 		     	<div class="col-sm-2 col-sm-offset-2" id="project_files">
-		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/html.png" alt="HTML5">
+		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/html-5-badge.png" alt="HTML5">
 		     	</div>
 		     	<div class="col-sm-2" id="project_files">
 		        	<img class="img-circle" src="img/prog_icon/my_ic_2/png/css.png" alt="CSS3">
