--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  
 	<!-- Custom Google Web Font -->
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -35,7 +36,10 @@
 	<!-- Magnific Popup core CSS file -->
 	<link rel="stylesheet" href="css/magnific-popup.css"> 
 	
-	<script src="js/modernizr-2.8.3.min.js"></script>  <!-- Modernizr /-->
+	<script src="js/modernizr-2.8.3.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<!-- Modernizr /-->
 	<!--[if IE 9]>
 		<script src="js/PIE_IE9.js"></script>
 	<![endif]-->
@@ -178,20 +182,18 @@
 			</div><br>
 			<div class="row">
 				 <div class="col-xs-4" id="project_files">
-					<a class="thumbnail" href="http://simplesimon.dev/index.html" target="_blank">
-						<img src="img/simple_simon.png">
-					</a>
+					<img class="img-responsive" src="img/simple_simon.png">
 					<div class="caption text-center">Simple Simon</div>
 				 </div>
 				 <div class="col-xs-4" id="project_files">
-					<a class="thumbnail" href="http://simplesimon.dev/index.html" target="_blank">
-						<img src="img/drag_weather.png">
+					<a class="thumbnail btn btn-primary btn-lg active" role="button" data-toggle="modal" data-target="#myModal">
+						<img class="img-responsive" src="img/drag_weather.png">
 					</a>
-					<div class="caption text-center">Weather Forecast</div>
+					<div class="caption animated flash text-center">Weather Forecast</div>
 				 </div>
 				 <div class="col-xs-4" id="project_files">
 					<a class="thumbnail" href="http://simplesimon.dev/index.html" target="_blank">
-						<img src="img/calculator.png">
+						<img class="img-responsive" src="img/calculator.png">
 					</a>
 					<div class="caption text-center">Calculator</div>
 				</div>
@@ -199,7 +201,7 @@
 			<div class="row">
 				<div class="col-xs-4" id="project_files">
 					<a class="thumbnail" href="http://simplesimon.dev/index.html" target="_blank">
-						<img src="img/fav_restaurants.png">
+						<img class="img-responsive" src="img/fav_restaurants.png">
 					</a>
 					<div class="caption text-center">NW EATS</div>
 				</div>
@@ -207,7 +209,28 @@
 		</div>
 	</div>
 
-<!-- End of Projects -->
+	<!-- Modal -->
+		<div id="myModal" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h4 class="modal-title">Modal Header</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p>Some text in the modal.</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+
+		  </div>
+		</div>
+
+<!-- End of Projects
 
 <!-- Languages Glyphs -->
 
