--- a/public/index.html
+++ b/public/index.html
@@ -182,17 +182,19 @@
 			</div><br>
 			<div class="row">
 				 <div class="col-xs-4" id="project_files">
-					<img class="img-responsive" src="img/simple_simon.png">
+				 	<a class="thumbnail btn btn-primary btn-lg active" role="button" data-toggle="modal" data-target="#simple_simon">
+						<img class="img-responsive" src="img/simple_simon.png">
+					</a>
 					<div class="caption text-center">Simple Simon</div>
 				 </div>
 				 <div class="col-xs-4" id="project_files">
-					<a class="thumbnail btn btn-primary btn-lg active" role="button" data-toggle="modal" data-target="#myModal">
+					<a class="thumbnail btn btn-primary btn-lg active" role="button" data-toggle="modal" data-target="#weather_app">
 						<img class="img-responsive" src="img/drag_weather.png">
 					</a>
 					<div class="caption animated flash text-center">Weather Forecast</div>
 				 </div>
 				 <div class="col-xs-4" id="project_files">
-					<a class="thumbnail" href="http://simplesimon.dev/index.html" target="_blank">
+					<a class="thumbnail btn btn-primary btn-lg active" role="button" data-toggle="modal" data-target="#calculator">
 						<img class="img-responsive" src="img/calculator.png">
 					</a>
 					<div class="caption text-center">Calculator</div>
@@ -200,7 +202,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-4" id="project_files">
-					<a class="thumbnail" href="http://simplesimon.dev/index.html" target="_blank">
+					<a class="thumbnail btn btn-primary btn-lg active" role="button" data-toggle="modal" data-target="#restaurants">
 						<img class="img-responsive" src="img/fav_restaurants.png">
 					</a>
 					<div class="caption text-center">NW EATS</div>
@@ -209,10 +211,10 @@
 		</div>
 	</div>
 
-	<!-- Modal -->
-		<div id="myModal" class="modal fade" role="dialog">
+	<!-- Modals -->
+		<!--Simon -->
+		<div id="simple_simon" class="modal fade" role="dialog">
 		  <div class="modal-dialog">
-
 		    <!-- Modal content-->
 		    <div class="modal-content">
 		      <div class="modal-header">
@@ -226,7 +228,63 @@
 		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 		      </div>
 		    </div>
+		  </div>
+		</div>
 
+		<!--Weather -->
+		<div id="weather_app" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h4 class="modal-title">Modal Header</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p>Some text in the modal.</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
+		<!--Calculator -->
+		<div id="calculator" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h4 class="modal-title">Modal Header</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p>Some text in the modal.</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
+		<!--Restaurants/Google Maps  -->
+		<div id="restaurants" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h4 class="modal-title">Modal Header</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p>Some text in the modal.</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
 		  </div>
 		</div>
 
@@ -237,7 +295,8 @@
 	<div id="languages" class="content-section-c">
         <div class="container">
           	<div class="col-lg-12 text-center white wrap_title">
-				<h2>Tech & Programming Languages</h2>
+				<h2>Tech & Tools</h2>
+				<h4>Below are languages/tools used in projects and code available on my github</h4>
 			</div>
 			<div class="row text-center">
 					<img class="img-circle" src="img/icon/speed.svg">
